<resources>
    <string name="app_name">PrimeiroApp</string>

    <string name="nome_completo">Full Name:</string>
    <string name="telefone">Phone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="masculino">Male</string>
    <string name="cidade">City:</string>
    <string name="estado">State:</string>
    <string name="limpar">Clean</string>
    <string name="enviar">Send</string>
    <string name="sexo">Sex:</string>
    <string name="guardar_e_mail">Save E-mail?</string>
    <string name="fulano_provedor_com">user@provider.com</string>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espirito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso do Sul</item>
        <item>Mato Grosso</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="feminino">Female</string>
</resources>